--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<artifactId>candyshop</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>candyshop</name>
+        <packaging>war</packaging>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>1.8</java.version>
