--- a/docker-playbook.yml
+++ b/docker-playbook.yml
@@ -1,60 +1,57 @@
 ---
-- hosts: ansibleclient
-  become: true
+#ansy playbook start with three dash
+-
+###this minus in yaml indicate a list of items. the play contains a list of play
+  hosts: client
   vars:
-    container_count: 2
-    default_container_name: docker
-    default_container_image: a30sham/candyshopappjwt
-    default_container_command: sleep 1d
-
+    container_count: 4
+    default_container_name: myconatiner 
+    default_container_image: a30sham/customapp
+    default_container_command: sleep 1
   tasks:
-    - name: Install aptitude  # package manager for ubuntu system
+    - name: update the vm 
       apt:
         name: aptitude
         state: latest
         update_cache: true
-
-    - name: Install required system packages
+    - name: install the required package 
       apt:
         pkg:
-          - apt-transport-https
           - ca-certificates
           - curl
-          - python3-pip
           - gnupg
           - lsb-release
-        state: latest
+        state: latest 
         update_cache: true
-
-    - name: Add Docker GPG apt Key
+    - name: add docker gpg key
       apt_key:
         url: https://download.docker.com/linux/ubuntu/gpg
-        state: present
+        state: present 
 
-    - name: Add Docker Repository
-      apt_repository:
+    - name: download docker repo 
+      apt_repository: 
         repo: deb https://download.docker.com/linux/ubuntu focal stable
+        state: present 
+    - name: install docker package 
+      apt: 
+        name: docker-ce 
+        state: latest 
+        update_cache: true 
+    - name: install python pip package
+      apt: 
+        name: python3-pip
         state: present
-
-    - name: Update apt and install docker-ce
-      apt:
-        name: docker-ce
-        state: latest
-        update_cache: true
-
-    - name: Install Docker Module for Python
+    - name: install docker module for python 
       pip:
-        name: docker
-
-    - name: Pull default Docker image
-      community.docker.docker_image:
-        name: "{{ default_container_image }}"
-        source: pull
-
-    - name: Create default containers
-      community.docker.docker_container:
-        name: "{{ default_container_name }}{{ item }}"
-        image: "{{ default_container_image }}"
-        command: "{{ default_container_command }}"
-        state: present
-      with_sequence: count={{ container_count }}
+        name: docker 
+  
+    - name: download the docker image
+      docker_image:
+        name: "{{default_container_image}}"
+        source: pull 
+    - name: run the docker container 
+      docker_container:
+        name: "{{default_container_name}}{{item}}"
+        image: "{{default_container_image}}"
+        command: "{{default_container_command}}"
+      with_sequence: count={{container_count}}
